--- a/contrib/Gui/ime_server/Makefile
+++ b/contrib/Gui/ime_server/Makefile
@@ -1,9 +1,9 @@
 TARGET  = IME
 SOURCES = main.cpp ImeServer.cpp
-INSTDIR = $(BINDIR)/APP/
-#INSTFILES  =
+INSTDIR = $(BINDIR)/APPS/
+INSTFILES  = BASICDIC.TXT IME.map
 CLEANFILES = BASICDIC.TX5
-
+ADDLINK = -lmonalibc-imp --enable-auto-import
 $(TARGET).EX5: $(CLEANFILES)
 
 SHAREDIR   = $(MONADIR)/share
@@ -16,6 +16,7 @@ BASICDIC.TX5: BASICDIC.TXT
 
 install-ime:
 	$(INSTALL) BASICDIC.TX5 $(MONADIR)/bin/iso
+	$(INSTALL) -p ./servers/ime.h $(INCDIR)/servers
 
 install: install-ime
 
