--- a/mona/tool/mkimg/MONITOR.CFG
+++ b/mona/tool/mkimg/MONITOR.CFG
@@ -10,5 +10,7 @@ SERVER=/SERVERS/SCREEN.EX5
 SERVER=/APPS/NET.EX5
 # uIP is launched by Scheme shell
 #SERVER=/APPS/UIP.EX5
+SERVER=/APPS/IME.EX5
 SERVER=/SERVERS/SCHEME.EX5
+
 #SERVER=/SERVERS/SHELL.EX5
