--- a/contrib/Devel/gmp-4.3.2/Makefile.mona
+++ b/contrib/Devel/gmp-4.3.2/Makefile.mona
@@ -20,7 +20,39 @@ TOP_CSOURCES=\
   randmts.c rands.c randsd.c randsdui.c randbui.c randmui.c version.c
 
 
-export MPN_ASMSOURCES= divrem_1.asm
+export MPN_ASMSOURCES= add_n.asm \
+addmul_1.asm \
+and_n.asm \
+andn_n.asm \
+bdiv_dbm1c.asm \
+com_n.asm \
+copyd.asm \
+copyi.asm \
+dive_1.asm \
+divrem_1.asm \
+divrem_2.asm \
+hamdist.asm \
+ior_n.asm \
+iorn_n.asm \
+lshift.asm \
+mod_1.asm \
+mod_34lsub1.asm \
+mode1o.asm \
+mul_1.asm \
+mul_2.asm \
+mul_basecase.asm \
+nand_n.asm \
+nior_n.asm \
+popcount.asm \
+rshift.asm \
+sqr_basecase.asm \
+sub_n.asm \
+submul_1.asm \
+udiv.asm \
+umul.asm \
+xnor_n.asm \
+xor_n.asm
+#divrem_1.asm bdiv_dbm1c.asm copyi.asm rshift.asm lshift.asm
 MPN_OBJECTS= $(patsubst %.asm, mpn/%.o, $(MPN_ASMSOURCES))
 
 ## For Mona, we choose mpn/generic function not to use x86 asms.
@@ -34,7 +66,6 @@ INCLUDE = -I. -I$(INCDIR) -I$(INCDIR)/stlport -I$(INCDIR)/monalibc
 
 all : mpn $(TARGET)
 	
-
 mpn:
 	cd mpn && $(MAKE) -f Makefile.mona
 
