--- a/contrib/Devel/gmp-4.3.2/Makefile.mona
+++ b/contrib/Devel/gmp-4.3.2/Makefile.mona
@@ -14,7 +14,7 @@ include $(MONADIR)/share/configs/Makefile.inc
 include $(MONADIR)/share/configs/dirnames.inc
 
 TOP_CSOURCES=\
-  assert.c compat.c errno.c extract-dbl.c invalid.c memory.c		\
+  assert.c compat.c errno.c extract-dbl.c invalid.c memory.c tal-reent.c \
   mp_bpl.c mp_clz_tab.c mp_dv_tab.c mp_minv_tab.c mp_get_fns.c mp_set_fns.c \
   rand.c randclr.c randdef.c randiset.c randlc2s.c randlc2x.c randmt.c	\
   randmts.c rands.c randsd.c randsdui.c randbui.c randmui.c version.c
