--- a/contrib/Devel/gmp-4.3.2/Makefile.mona
+++ b/contrib/Devel/gmp-4.3.2/Makefile.mona
@@ -117,7 +117,6 @@ com_n.asm \
 copyd.asm \
 copyi.asm \
 dive_1.asm \
-divrem_1.asm \
 divrem_2.asm \
 hamdist.asm \
 ior_n.asm \
@@ -140,11 +139,7 @@ udiv.asm \
 umul.asm \
 xnor_n.asm \
 xor_n.asm \
-divrem_1.asm \
-bdiv_dbm1c.asm \
-copyi.asm \
-rshift.asm \
-lshift.asm
+divrem_1.asm
 
 MPN_OBJECTS= $(patsubst %.asm, mpn/%.o, $(MPN_ASMSOURCES)) $(patsubst %.c, mpn/%.o, $(MPN_CSOURCES))
 
