--- a/contrib/Devel/gmp-4.3.2/Makefile.mona
+++ b/contrib/Devel/gmp-4.3.2/Makefile.mona
@@ -237,52 +237,11 @@ distclean: clean
 	touch dependencies
 
 install: $(TARGET)
-# 	mkdir -p $(LIBDIR)
-# 	$(INSTALL) -p -m 0644 $(LIB_STATIC) $(LIBDIR)/
-# ifneq ($(BUILD_TARGET),ELF)
-# 	$(INSTALL) -p -m 0644 $(LIB_IMPORT) $(LIBDIR)/
-# 	mkdir -p $(BINDIR)/LIBS
-# 	$(INSTALL) -p $(LIB_DYNAMIC5) $(BINDIR)/LIBS/
-# endif
-# 	mkdir -p $(INCDIR)/gui
-# 	mkdir -p $(INCDIR)/gui/System
-# 	mkdir -p $(INCDIR)/gui/System/Collections
-# 	mkdir -p $(INCDIR)/gui/System/Drawing
-# 	mkdir -p $(INCDIR)/gui/System/Mona
-# 	mkdir -p $(INCDIR)/gui/System/Mona/Forms
-# 	mkdir -p $(INCDIR)/gui/System/Text
-# 	mkdir -p $(BINDIR)/APPS/
-# 	$(INSTALL) -p -m 0644 ./gui/System/*.h $(INCDIR)/gui/System
-# 	$(INSTALL) -p -m 0644 ./gui/System/Collections/*.h $(INCDIR)/gui/System/Collections
-# 	$(INSTALL) -p -m 0644 ./gui/System/Drawing/*.h $(INCDIR)/gui/System/Drawing
-# 	$(INSTALL) -p -m 0644 ./gui/System/Mona/Forms/*.h $(INCDIR)/gui/System/Mona/Forms
-# 	$(INSTALL) -p -m 0644 ./gui/System/Mona/*.h $(INCDIR)/gui/System/Mona
-# 	$(INSTALL) -p -m 0644 ./gui/System/Text/*.h $(INCDIR)/gui/System/Text
-# 	$(INSTALL) -p MONAFRMS.MSH $(BINDIR)/APPS
-# 	$(INSTALL) -p MONAFRMS.INI $(BINDIR)/APPS
-# 	$(INSTALL) -p MONAFUN.JPG $(BINDIR)/APPS
-# 	$(INSTALL) -p MONAFUN.BMP $(BINDIR)/APPS
-
-# uninstall:
-# 	rm -f $(LIBDIR)/$(LIB_STATIC)
-# ifneq ($(BUILD_TARGET),ELF)
-# 	rm -f $(LIBDIR)/$(LIB_IMPORT)
-# 	rm -f $(BINDIR)/LIBS/$(LIB_DYNAMIC5)
-# endif
-# 	rm -f $(INCDIR)/gui/System/*.h
-# 	rm -f $(INCDIR)/gui/System/Collections/*.h
-# 	rm -f $(INCDIR)/gui/System/Drawing/*.h
-# 	rm -f $(INCDIR)/gui/System/Mona/Forms/*.h
-# 	rm -f $(INCDIR)/gui/System/Text/*.h
-# 	rm -r $(INCDIR)/gui/System/Text
-# 	rm -r $(INCDIR)/gui/System/Mona/Forms
-# 	rm -r $(INCDIR)/gui/System/Mona
-# 	rm -r $(INCDIR)/gui/System/Drawing
-# 	rm -r $(INCDIR)/gui/System/Collections
-# 	rm -r $(INCDIR)/gui/System
-# 	rm -r $(INCDIR)/gui
-# 	rm -f $(BINDIR)/APPS/MONAFRMS.INI
-# 	rm -f $(BINDIR)/APPS/MONAFRMS.MSH
-# 	rm -f $(BINDIR)/APPS/MONAFUN.JPG
+	mkdir -p $(LIBDIR)
+	$(INSTALL) -p -m 0644 $(LIB_STATIC) $(LIBDIR)/
+	$(INSTALL) -p -m 0644 $(LIB_IMPORT) $(LIBDIR)/
+	mkdir -p $(BINDIR)/LIBS
+	$(INSTALL) -p $(LIB_DYNAMIC5) $(BINDIR)/LIBS/
+	$(INSTALL) -p -m 0644 gmp.h $(INCDIR)/
 
 -include dependencies
