Added tests for gmp.

--- a/mona/core/scheme/lib/conf.scm.in
+++ b/mona/core/scheme/lib/conf.scm.in
@@ -366,6 +366,7 @@
 ;; (print "...")
 ;; (tstd)
 ;; (print "done")
+(call-process "/APPS/TGMP.EX5")
 (call-process "/APPS/TSTACK.APP/TSTACK.EX5")
 (call-process "/APPS/HELLO.EX5")
 (call-process "/APPS/TMISC.EX5")
